# sg-operator

./: .gitignore  README.md  pyproject.toml
emlfit/: __init__.py  core.py  formula.py  refine.py  regressor.py
examples/: demo.py  depth3_demo.py  try_circle_area.py
tests/: test_core.py
